# benchmark-system

./: README.md  attach-screen.sh  attach-slurm.sh  attach-ssh.sh  bench-commit-sbatch.sh  bench-commit-screen.sh  bench-commit-ssh.sh  bench-wrap  benchmark-supervisor.sh  benchmark_env.sh  build-initial-opam.sh  cancel.sh  compile-task.sh  dune-project  local_bench_allocator  processor.sh  slurm_allocator_sub  slurm_bench_allocator  slurm_bench_allocator_sub  slurm_compile_allocator  slurm_compile_allocator_sub  spawn-processor.sh  srun-command.sh  srun-tactician-benchmark.sh  tactician-benchmark.opam  tee-output.sh
ciirc-specific/: attach-screen.sh  bench-commit-screen.sh  bench-commit-ssh.sh  benchmark_env.sh  srun-tactician-benchmark.sh
legacy/: bench-wrap  build-initial-opam.sh  compile-task.sh  spawn-processor.sh  tee-output.sh
local/: bench_allocator  compile_allocator
lsf/: bench_allocator  compile_allocator  exec-from-stdin  exec-through-stdin  test  write-cmd-to-stdin
slurm/: .bench_allocator.~undo-tree~  .compile_allocator.~undo-tree~  bench_allocator  bench_allocator_sub  compile_allocator  compile_allocator_sub
src/benchmark/: arg_parser.ml  dune  main.ml  opam_build.ml  rsync_preprocess.ml  spawn_with_socket.ml
src/opam_build/: dune  opam_benchmark.ml  package_calculations.ml
