(executable
 (public_name tactician-benchmark)
 (name main)
 (libraries extunix core async rpc_parallel opam_build)
 (modules main arg_parser spawn_with_socket)
 (preprocess (pps ppx_jane)))

(executable
 (public_name opam-build)
 (name opam_build)
 (modules opam_build)
 (libraries
   core async opam_build)
)
