(executable
 (public_name tactician-benchmark)
 (name main)
 (libraries str extunix core core_unix.command_unix core_unix.filename_unix core_unix.signal_unix core_unix.time_unix async rpc_parallel rpc_parallel.unauthenticated opam_build)
 (modules main arg_parser spawn_with_socket)
 (preprocess (pps ppx_jane)))

(executable
 (public_name rsync-preprocess)
 (name rsync_preprocess)
 (libraries unix)
 (modules rsync_preprocess))

(executable
 (public_name opam-build)
 (name opam_build)
 (modules opam_build)
 (libraries
   core core_unix.command_unix async opam_build)
)
